@@ -34,7 +34,7 @@
 ############################################################################
 
 STRING_SRCS	= lib_checkbase.c lib_isbasedigit.c lib_memset.c lib_memchr.c \
-		  lib_memcpy.c lib_memcmp.c lib_memmove.c lib_skipspace.c \
+		  lib_memccpy.c lib_memcpy.c lib_memcmp.c lib_memmove.c lib_skipspace.c \
 		  lib_strcasecmp.c lib_strcat.c lib_strchr.c lib_strcpy.c lib_strcmp.c \
 		  lib_strcspn.c lib_strdup.c lib_strerror.c lib_strlen.c lib_strnlen.c \
 		  lib_strncasecmp.c lib_strncat.c lib_strncmp.c lib_strncpy.c \
